navBar Fixed position and layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,16 @@ body {
   font-family: monospace;
   font-size: var(--font-size-text-medium);
   background: var(--color-gray-2);
+  padding-top: 6rem;
+  padding-inline: 10rem;
+}
+
+@media screen and (max-width: 1024px) {
+
+  body {
+    padding-top: 7rem;
+    padding-inline: 6rem;
+  }
 }
 
 /* --------- Lists --------- */
@@ -60,9 +70,6 @@ a {
 }
 
 /* --------- Layouts --------- */
-.section {
-  margin-inline: 10rem;
-}
 
 @media screen and (max-width: 1024px) {
   .section {
@@ -82,6 +89,10 @@ a {
 
 /* --------- Navigation Bar --------- */
 .nav {
+  position: fixed;
+  top: 0;
+  width: -webkit-fill-available;
+  margin-right: 10rem;
   margin-top: 0.75rem;
   border-radius: 3rem;
   background: var(--color-white);
@@ -90,7 +101,6 @@ a {
   padding: 0.25rem;
   box-shadow: 4px 7px var(--color-black);
   border: 1px solid black;
-  z-index: 2;
 }
 
 .nav .grid {
@@ -162,6 +172,10 @@ a {
 }
 
 @media screen and (max-width: 1024px) {
+
+  .nav {
+    margin-right: 6rem;
+  }
   .nav .list__item {
     width: auto;
   }
@@ -179,7 +193,7 @@ a {
   }
 }
 
-@media screen and (max-width: 725px) {
+@media screen and (max-width: 764px) {
 
   .nav .grid {
     justify-content: space-between;
@@ -252,13 +266,14 @@ a {
   height: fit-content;
   transition: all 0.15s;
   border: 2px solid var(--color-black);
-  font-weight: 400;
+  font-weight: 600;
   box-shadow: 1px 1px var(--color-black);
+  border-radius: 4px;
 }
 
 .page-title:hover {
-  box-shadow: 4px 7px var(--color-black);
-  font-weight: 600;
+  box-shadow: 4px 5px var(--color-black);
+  font-weight: 400;
 }
 
 .cards {
@@ -274,12 +289,11 @@ a {
   border: 2px solid var(--color-black);
   border-radius: 1rem;
   transition: all 0.2s;
-  box-shadow: 1px 3px var(--color-black);
+  box-shadow: 1px 1px var(--color-black);
 }
 
 .card:hover {
-  transform: scale(1.04);
-  box-shadow: 4px 7px var(--color-black);
+  box-shadow: 6px 7px var(--color-black);
 }
 
 @media screen and (max-width: 1024px) {
@@ -299,5 +313,12 @@ a {
 
   .page-title {
     margin-inline: 1rem;
+  }
+}
+
+@media screen and (max-width: 530px) {
+
+  .card {
+    width: auto;
   }
 }
